<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_padding_standard"
    android:theme="@style/TextViewStyleAbout"
    tools:context="activity.AboutActivity">

    <ImageView
        android:id="@+id/citsaLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_citsalogo"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/citsa40"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_citsa40"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewStyleAbout.Large"
        android:layout_marginTop="8dp"
        android:text="@string/text_about_citsa_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citsa40" />

    <TextView
        android:id="@+id/text_view_home_violations_title"
        style="@style/TextViewStyleAbout.Large"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/text_view_guest_violations_title"
        style="@style/TextViewStyleAbout.Large"
        android:text="@string/text_about_app_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_home_violations_title" />

    <View
        android:id="@+id/view3"
        style="@style/DividerLine"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/text_view_guest_violations_title" />

    <TextView
        android:id="@+id/text_view_home_violations"
        style="@style/TextViewStyleAbout"
        android:text="@string/text_about_website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/text_view_guest_violations"
        style="@style/TextViewStyleAbout"
        android:text="@string/text_about_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_home_violations" />

    <TextView
        android:id="@+id/textView11"
        style="@style/TextViewStyleAbout"
        android:text="@string/text_about_email_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_guest_violations" />

    <TextView
        android:id="@+id/textView12"
        style="@style/TextViewStyleAbout"
        android:text="@string/text_about_email_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/aboutOpenWebsite"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_about_visit_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


</android.support.constraint.ConstraintLayout>


