<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".fragment.HomeFragment">

    <Button
        android:id="@+id/button_decrease_home_score"
        style="@style/Widget.AppCompat.Button.Counter.Minus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_score"
        app:layout_constraintEnd_toStartOf="@+id/text_view_home_score"
        app:layout_constraintTop_toTopOf="@+id/text_view_home_score" />

    <TextView
        android:id="@+id/text_view_home_score"
        style="@style/TextViewNumbers.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textViewHomeLayout"
        app:layout_constraintStart_toStartOf="@+id/textViewHomeLayout"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeLayout"
        tools:text="109" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textViewHomeLayout"
        style="@style/Widget.Design.TextInputLayout.TeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_view_home"
        app:layout_constraintEnd_toStartOf="@+id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_home_name"
            style="@style/Widget.AppCompat.EditText.TeamName.X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:backgroundTint="@android:color/white" />

    </android.support.design.widget.TextInputLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_guest_name_layout"
        style="@style/Widget.Design.TextInputLayout.TeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_view_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline50"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_guest_name"
            style="@style/Widget.AppCompat.EditText.TeamName.X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:backgroundTint="@android:color/white" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/text_view_set_title"
        style="@style/TextViewNumbers.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_view_title_set"
        app:layout_constraintBottom_toTopOf="@+id/text_view_number_of_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_number_of_set"
        style="@style/TextViewNumbers.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="8" />

    <TextView
        android:id="@+id/text_view_home_violations_title"
        style="@style/TextViewNumbers.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_violations"
        app:layout_constraintEnd_toStartOf="@+id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_decrease_home_score" />

    <TextView
        android:id="@+id/text_view_guest_violations_title"
        style="@style/TextViewNumbers.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_view_violations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline50"
        app:layout_constraintTop_toTopOf="@+id/text_view_home_violations_title" />

    <TextView
        android:id="@+id/text_view_guest_score"
        style="@style/TextViewNumbers.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_guest_name_layout"
        app:layout_constraintStart_toStartOf="@+id/edit_text_guest_name_layout"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_guest_name_layout"
        tools:text="450" />

    <TextView
        android:id="@+id/text_view_home_violations"
        style="@style/TextViewNumbers.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/text_view_home_violations_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_home_violations_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_home_violations_title"
        tools:text="9" />

    <TextView
        android:id="@+id/text_view_guest_violations"
        style="@style/TextViewNumbers.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/text_view_guest_violations_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_guest_violations_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_guest_violations_title"
        tools:text="5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/button_increase_home_score"
        style="@style/Widget.AppCompat.Button.Counter.Plus"
        android:gravity="center"
        android:textAlignment="gravity"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_score"
        app:layout_constraintStart_toEndOf="@+id/text_view_home_score"
        app:layout_constraintTop_toTopOf="@+id/text_view_home_score" />

    <Button
        android:id="@+id/button_decrease_home_violations"
        style="@style/Widget.AppCompat.Button.Counter.Minus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_violations"
        app:layout_constraintEnd_toStartOf="@+id/text_view_home_violations"
        app:layout_constraintTop_toTopOf="@+id/text_view_home_violations" />

    <Button
        android:id="@+id/button_increase_home_violations"
        style="@style/Widget.AppCompat.Button.Counter.Plus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_home_violations"
        app:layout_constraintStart_toEndOf="@+id/text_view_home_violations"
        app:layout_constraintTop_toTopOf="@+id/text_view_home_violations" />

    <Button
        android:id="@+id/button_decrease_sets"
        style="@style/Widget.AppCompat.Button.Counter.Minus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_number_of_set"
        app:layout_constraintEnd_toStartOf="@+id/text_view_number_of_set"
        app:layout_constraintTop_toTopOf="@+id/text_view_number_of_set" />

    <Button
        android:id="@+id/button_increase_sets"
        style="@style/Widget.AppCompat.Button.Counter.Plus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_number_of_set"
        app:layout_constraintStart_toEndOf="@+id/text_view_number_of_set"
        app:layout_constraintTop_toTopOf="@+id/text_view_number_of_set" />

    <Button
        android:id="@+id/button_decrease_guest_score"
        style="@style/Widget.AppCompat.Button.Counter.Minus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_score"
        app:layout_constraintEnd_toStartOf="@+id/text_view_guest_score"
        app:layout_constraintTop_toTopOf="@+id/text_view_guest_score" />

    <Button
        android:id="@+id/button_increase_guest_score"
        style="@style/Widget.AppCompat.Button.Counter.Plus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_score"
        app:layout_constraintStart_toEndOf="@+id/text_view_guest_score"
        app:layout_constraintTop_toTopOf="@+id/text_view_guest_score" />

    <Button
        android:id="@+id/button_decrease_guest_violations"
        style="@style/Widget.AppCompat.Button.Counter.Minus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_violations"
        app:layout_constraintEnd_toStartOf="@+id/text_view_guest_violations"
        app:layout_constraintTop_toTopOf="@+id/text_view_guest_violations" />

    <Button
        android:id="@+id/button_increase_guest_violations"
        style="@style/Widget.AppCompat.Button.Counter.Plus"
        android:theme="@style/Widget.AppCompat.Button.Counter"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_guest_violations"
        app:layout_constraintStart_toEndOf="@+id/text_view_guest_violations"
        app:layout_constraintTop_toTopOf="@+id/text_view_guest_violations" />

    <TextView
        android:id="@+id/text_view_title_time"
        style="@style/TextViewNumbers.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_time"
        style="@style/TextViewNumbers.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="88:22"
        app:layout_constraintEnd_toEndOf="@+id/text_view_title_time"
        app:layout_constraintStart_toStartOf="@+id/text_view_title_time"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title_time" />

    <!--<ImageButton-->
    <!--style="@style/Widget.AppCompat.Button"-->
    <!--android:layout_width="@dimen/size_button_counter"-->
    <!--android:layout_height="@dimen/size_button_counter"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:src="@drawable/ic_timer_black_24dp"-->
    <!--android:tint="@color/colorPrimary"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->


</android.support.constraint.ConstraintLayout>